# Primary-Role

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rustfmt.toml
.github/workflows/: docker-image.yml  test.yml
k8s/: bot-data-persistentvolumeclaim.yaml  role-bot-deployment.yaml
proptest-regressions/: data.txt
src/: data.rs  main.rs
src/commands/: bot_management.rs  commands.rs  disable.rs  enable.rs  mod.rs  primary_role.rs  set_primary_role.rs  sweep.rs
