[package]
name = "discord_bot"
version = "0.1.1"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.22"
phf = { version = "0.13.1", features = ["macros"] }
serenity = "0.12.2"
sqlite = "0.36.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
proptest = "1.5.0"
proptest-state-machine = "0.3.0"
